force-app/main/default/objects/NRIC_Details__mdt/NRIC_Details__mdt.object-meta.xml
<CustomObject>
    <label>NRIC Detail</label>
    <pluralLabel>NRIC Details</pluralLabel>
</CustomObject>