force-app/main/default/objects/NRIC_Details__mdt/fields/Alphabet__c.field-meta.xml
<CustomField>
    <fullName>Alphabet__c</fullName>
    <label>Alphabet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>