force-app/main/default/objects/NRIC_Details__mdt/fields/Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>Check_Digit__c</fullName>
    <label>Check Digit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>