force-app/main/default/objects/NRIC_Details__mdt/fields/Initial_Letter__c.field-meta.xml
<CustomField>
    <fullName>Initial_Letter__c</fullName>
    <label>Initial Letter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>